@@ -1,3 +1,25 @@
+// ------------------------------------------------------------------------
+// kvu_message_queue.cpp: Special purpose queue data for RT msg passsing
+// Copyright (C) 2009,2012 Kai Vehmanen
+//
+// Attributes:
+//     eca-style-version: 3
+//
+// This program is free software; you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation; either version 2 of the License, or
+// (at your option) any later version.
+// 
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+// 
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
+// ------------------------------------------------------------------------
+
 #ifndef INCLUDE_KVU_MESSAGE_QUEUE_H
 #define INCLUDE_KVU_MESSAGE_QUEUE_H
 
@@ -87,6 +109,35 @@ public:
       }
       else {
 	res = 0;
+      }
+      pthread_mutex_unlock(&lock_rep);
+    }
+    else {
+      res = -1;
+    }
+
+    return res;
+  }
+
+  /**
+   * Fetches but does not remove the front item in the queue.
+   * If the queue is empty, an error is returned.
+   *
+   * Execution note: rt-safe, does not block
+   *
+   * @return 1 on success, -1 if busy, 0 if empty
+   */
+  int peek_front(T* front_msg) {
+    int res = 1;
+    int lockres = pthread_mutex_trylock(&lock_rep);
+
+    if (lockres == 0) {
+      if (msgs_rep.size() > 0) {
+        if (front_msg != 0)
+          *front_msg = msgs_rep.front();
+      }
+      else {
+        res = 0;
       }
       pthread_mutex_unlock(&lock_rep);
     }
